--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@repo/ui": "*",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^6.20.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@repo/backend": "*",
-    "@repo/ui": "*",
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
