--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@repo/ui": "file:./src/ui",
+    "@repo/ui": "*",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.20.0",
